--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,10 +10,11 @@
 @import "blocks/hero_slider";
 @import "blocks/hero_slider_two_cols";
 @import "blocks/text_with_image";
-@import "blocks/text_with_slider";
-@import "blocks/text_block";
-@import "blocks/help_block";
-@import "blocks/cards";
+@import "blocks/text&slider";
+@import "blocks/title_block";
+@import "blocks/number_animation";
+@import "blocks/image_row";
+@import "blocks/map";
 @import "header";
 @import "main";
 @import "footer";
