--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,50 +1,77 @@
 footer {
-  background-color: #363b44;
-  position: relative;
-  #copyright {
-    color: white;
+  background-color: $color2;
+  padding: 70px 0px;
+  @media screen and (max-width: 576px) {
+    padding: 35px 0px;
+  }
+  .footer__title-container {
+    h2 {
+      padding-bottom: 70px;
+      display: flex;
+      justify-content: flex-start;
+      @media screen and (max-width: 576px) {
+        padding-bottom: 0px;
+      }
+      @media screen and (max-width: 768px) {
+        padding-bottom: 35px;
+        justify-content: flex-start;
+      }
+    }
+  }
+  .footer__text-container {
     height: 100%;
     display: flex;
-    align-items: center;
+    align-items: end;
     justify-content: center;
-  }
-  .footer-main {
-    display: flex;
-    align-items: center;
-    padding: 150px 0px;
     @media screen and (max-width: 768px) {
-      padding: 80px 0px;
+      justify-content: flex-start;
     }
-    .row {
-      justify-content: center;
-      .footer__image-container {
-        padding-bottom: 20px;
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: contain;
-        }
+    p {
+      color: white;
+      font-size: 28px;
+      width: 400px;
+      line-height: 38px;
+      @media screen and (max-width: 576px) {
+        font-size: 18px;
       }
-      .content-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-        p {
-          color: white;
-          margin: 0;
-          @media screen and (max-width: 768px) {
-            padding: 20px 0px;
-          }
-        }
-        a {
-          color: white;
-          text-decoration: none;
-          transition: all 0.3s ease;
-          &:hover {
-            color: #f58220;
-          }
-        }
+    }
+  }
+  .footer__form-container {
+    @media screen and (max-width: 768px) {
+      width: 500px;
+    }
+    @media screen and (max-width: 576px) {
+      width: 300px;
+    }
+  }
+  .footer__contact-container {
+    height: 100%;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    @media screen and (max-width: 768px) {
+      justify-content: flex-start;
+      padding-top: 35px;
+    }
+
+    p {
+      color: white;
+      font-size: 14px;
+    }
+  }
+  .socials-container {
+    padding: 70px 0px;
+    ul {
+      display: flex;
+      flex-direction: row;
+      justify-content: start;
+      @media screen and (max-width: 768px) {
+        padding: 0px;
+      }
+
+      li {
+        list-style-type: none;
+        padding-right: 20px;
       }
     }
   }
