--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,10 +3,9 @@
 $black: #000;
 $white: #fff;
 
-$color1: #403635;
-$color2: #eae2dc;
-$color3: #929b96;
-$color4: #929b96;
+$color1: #b38c4a;
+$color2: #041d2d;
+$color3: #ffffff;
 
 $btn-color1: black;
 $btn-color2: blue;
@@ -15,8 +14,8 @@ $btn-color2: blue;
 $btn-text-light: #fff;
 $btn-text-dark: #000;
 
-$font1: "myriad-pro", sans-serif;
-$font2: "Open Sans", sans-serif;
+$font1: "Playfair Display", serif;
+$font2: "neue-haas-unica", sans-serif;
 
 $shadow1: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
