semi live zetten 08/13/2025

--- a/sass/_404.scss
+++ b/sass/_404.scss
@@ -1,3 +1,16 @@
 section.error-404 {
-    padding:5em 0;
+  padding: 5em 0;
+  background: $color2;
+  h1 {
+    color: $color1;
+  }
+  p {
+    color: white;
+  }
+  .buttons {
+    a {
+      background-color: $color1;
+      color: white;
+    }
+  }
 }
