--- a/sass/blocks/_image_row.scss
+++ b/sass/blocks/_image_row.scss
@@ -1,9 +1,11 @@
 .image_row {
   background-color: $color2;
   padding: 70px 0px;
+
   @media screen and (max-width: 576px) {
     padding: 35px 0px;
   }
+
   .col-md-4 {
     &:nth-child(1) {
       img {
@@ -11,12 +13,38 @@
       }
     }
   }
+
   &__img-container {
+    position: relative;
     height: 100%;
+
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      transition: opacity ease 0.3s;
+    }
+
+    .image_row__svg-overlay {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      opacity: 0;
+      transition: opacity ease 0.3s;
+      pointer-events: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    &:hover {
+      img {
+        opacity: 0.2;
+      }
+      .image_row__svg-overlay {
+        opacity: 1;
+      }
     }
   }
 }
