--- a/sass/blocks/_text&slider.scss
+++ b/sass/blocks/_text&slider.scss
@@ -48,6 +48,7 @@
       text-align: left;
       h2 {
         text-align: left;
+        font-weight: 400;
       }
 
       @media screen and (max-width: 1399px) {
